[gd_scene load_steps=45 format=3 uid="uid://dv7010105eerr"]

[ext_resource type="Script" uid="uid://bttvluxjegrnh" path="res://Enemies/Scripts/enemy.gd" id="1_a1ea2"]
[ext_resource type="PackedScene" uid="uid://csx73sqot3jqh" path="res://GeneralNodes/HurtBox/hurt_box.tscn" id="2_yuf7p"]
[ext_resource type="PackedScene" uid="uid://bgt7thfgw0ugh" path="res://GeneralNodes/HitBox/hit_box.tscn" id="3_segje"]
[ext_resource type="Texture2D" uid="uid://crkew6pdof7xt" path="res://Enemies/Slime/Shadow.png" id="4_0tyai"]
[ext_resource type="Texture2D" uid="uid://dontk7uhfjaxt" path="res://Enemies/Goblin/goblin.png" id="5_8phll"]
[ext_resource type="AudioStream" uid="uid://dme8oacnaq834" path="res://Enemies/Slime/hit_01.wav" id="6_lowoh"]
[ext_resource type="AudioStream" uid="uid://ci7vxluvrd0ol" path="res://Enemies/Slime/hit_00.wav" id="7_d723m"]
[ext_resource type="Script" uid="uid://rybxbh5hw6sa" path="res://Enemies/Scripts/enemy_state_machine.gd" id="8_ba17h"]
[ext_resource type="Script" uid="uid://6mptu0odax52" path="res://Enemies/Scripts/enemy_state_idle.gd" id="9_vtv70"]
[ext_resource type="Script" uid="uid://wr2sekydlqy8" path="res://Enemies/Scripts/enemy_state_walk.gd" id="10_rhjxw"]
[ext_resource type="Script" uid="uid://cggnggk7m1eq0" path="res://Enemies/Scripts/enemy_state_stun.gd" id="11_1gm6n"]
[ext_resource type="Script" uid="uid://bn3njn5an8f3o" path="res://Enemies/Scripts/enemy_state_destroy.gd" id="12_l6ub2"]
[ext_resource type="Script" uid="uid://mhgh1ilnd0tn" path="res://Enemies/Scripts/drop_data.gd" id="13_4btce"]
[ext_resource type="Resource" uid="uid://cs7hbechg25cp" path="res://Items/SkillBook/dash.tres" id="14_p257j"]
[ext_resource type="Script" uid="uid://lt2hdyb0cu7w" path="res://Enemies/Scripts/enemy_state_chase.gd" id="15_3lvh1"]
[ext_resource type="Resource" uid="uid://dhkuedwtsl10l" path="res://Items/potion.tres" id="15_l2k1h"]
[ext_resource type="Texture2D" uid="uid://dlutp0ayihmko" path="res://Enemies/Slime/DestroySmoke.png" id="15_s3i5d"]
[ext_resource type="Resource" uid="uid://b18mckj37pvc2" path="res://Items/SkillBook/barrage_swarm.tres" id="16_l2k1h"]
[ext_resource type="PackedScene" uid="uid://bi5drlmr351u3" path="res://Enemies/VisionArea.tscn" id="17_kulay"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dwa5g"]
radius = 11.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cusv4"]
radius = 4.0
height = 20.0

[sub_resource type="Animation" id="Animation_m8gpi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShadowSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.823529)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_c5lvk"]
resource_name = "chase_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 14), Vector2(-10, 25)]
}

[sub_resource type="Animation" id="Animation_aqyus"]
resource_name = "chase_side"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 13), Vector2(14, 12)]
}

[sub_resource type="Animation" id="Animation_biip0"]
resource_name = "chase_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [16, 17, 18, 19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/AttackHurtBox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 3), Vector2(7, -9)]
}

[sub_resource type="Animation" id="Animation_o5c5s"]
resource_name = "destroy_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_d723m")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DestroyEffectSprite/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_fmrx3"]
resource_name = "destroy_side"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_d723m")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DestroyEffectSprite/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_tvgm0"]
resource_name = "destroy_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_d723m")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true
tracks/4/type = "animation"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DestroyEffectSprite/AnimationPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": PackedStringArray("destroy"),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_3xmv8"]
resource_name = "idle_down"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6kohy"]
resource_name = "idle_side"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8]
}

[sub_resource type="Animation" id="Animation_70x2e"]
resource_name = "idle_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}

[sub_resource type="Animation" id="Animation_rvxrh"]
resource_name = "stun_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_y1e4c"]
resource_name = "stun_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_n76vp"]
resource_name = "stun_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_lowoh")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_xtq2w"]
resource_name = "walk_down"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_sbld0"]
resource_name = "walk_side"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_5uddn"]
resource_name = "walk_up"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoh2d"]
_data = {
&"RESET": SubResource("Animation_m8gpi"),
&"chase_down": SubResource("Animation_c5lvk"),
&"chase_side": SubResource("Animation_aqyus"),
&"chase_up": SubResource("Animation_biip0"),
&"destroy_down": SubResource("Animation_o5c5s"),
&"destroy_side": SubResource("Animation_fmrx3"),
&"destroy_up": SubResource("Animation_tvgm0"),
&"idle_down": SubResource("Animation_3xmv8"),
&"idle_side": SubResource("Animation_6kohy"),
&"idle_up": SubResource("Animation_70x2e"),
&"stun_down": SubResource("Animation_rvxrh"),
&"stun_side": SubResource("Animation_y1e4c"),
&"stun_up": SubResource("Animation_n76vp"),
&"walk_down": SubResource("Animation_xtq2w"),
&"walk_side": SubResource("Animation_sbld0"),
&"walk_up": SubResource("Animation_5uddn")
}

[sub_resource type="Resource" id="Resource_hi8dh"]
script = ExtResource("13_4btce")
item = ExtResource("14_p257j")
probability = 1.0
min_amount = 1
max_amount = 1

[sub_resource type="Resource" id="Resource_4i25o"]
script = ExtResource("13_4btce")
item = ExtResource("15_l2k1h")
probability = 100.0
min_amount = 1
max_amount = 1
metadata/_custom_type_script = "uid://mhgh1ilnd0tn"

[sub_resource type="Resource" id="Resource_p7r07"]
script = ExtResource("13_4btce")
item = ExtResource("16_l2k1h")
probability = 1.0
min_amount = 1
max_amount = 1
metadata/_custom_type_script = "uid://mhgh1ilnd0tn"

[sub_resource type="Animation" id="Animation_6iv8l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_v2o73"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333, 0.333333, 0.466667, 0.566667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1ubl"]
_data = {
&"RESET": SubResource("Animation_6iv8l"),
&"destroy": SubResource("Animation_v2o73")
}

[node name="Goblin" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 256
collision_mask = 16
script = ExtResource("1_a1ea2")
enemy_id = "goblin"

[node name="HurtBox" parent="." instance=ExtResource("2_yuf7p")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -5)
scale = Vector2(0.85, 0.85)
shape = SubResource("CircleShape2D_dwa5g")
debug_color = Color(0.997342, 0, 0.168065, 0.42)

[node name="HitBox" parent="." instance=ExtResource("3_segje")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dwa5g")
debug_color = Color(0.842281, 0.381267, 7.70092e-07, 0.42)

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.823529)
position = Vector2(0, 4)
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_0tyai")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("5_8phll")
hframes = 8
vframes = 3

[node name="AttackHurtBox" parent="Sprite2D" instance=ExtResource("2_yuf7p")]
position = Vector2(0, 10)
monitoring = false
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/AttackHurtBox"]
position = Vector2(0, -5)
scale = Vector2(0.85, 0.85)
shape = SubResource("CircleShape2D_dwa5g")
debug_color = Color(0.997342, 0, 0.168065, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cusv4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hoh2d")
}
autoplay = "idle_down"

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("8_ba17h")

[node name="Idle" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("after_idle_state")]
script = ExtResource("9_vtv70")
after_idle_state = NodePath("../Wander")

[node name="Wander" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("10_rhjxw")
state_animation_duration = 0.7
next_state = NodePath("../Idle")

[node name="Stun" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("next_state")]
script = ExtResource("11_1gm6n")
next_state = NodePath("../Idle")

[node name="Destroy" type="Node" parent="EnemyStateMachine"]
script = ExtResource("12_l6ub2")
drops = Array[ExtResource("13_4btce")]([SubResource("Resource_hi8dh"), SubResource("Resource_4i25o"), SubResource("Resource_p7r07")])

[node name="Chase" type="Node" parent="EnemyStateMachine" node_paths=PackedStringArray("vision_area", "attack_area", "next_state")]
script = ExtResource("15_3lvh1")
vision_area = NodePath("../../VisionArea")
attack_area = NodePath("../../Sprite2D/AttackHurtBox")
next_state = NodePath("../Idle")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -5)
bus = &"SFX"

[node name="DestroyEffectSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -7)
texture = ExtResource("15_s3i5d")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="DestroyEffectSprite"]
libraries = {
&"": SubResource("AnimationLibrary_v1ubl")
}

[node name="VisionArea" parent="." instance=ExtResource("17_kulay")]
position = Vector2(0, -12)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="VisionArea"]
polygon = PackedVector2Array(-16, 0, 16, 0, 128, 128, -128, 128)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.875, -5.625)
scale = Vector2(2.0625, 2.3125)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
